Created a function to check if user has a PlayerVotes collection.
Moved searchPlayerVotes to become a method call.

--- a/client/templates/testing.html
+++ b/client/templates/testing.html
@@ -2,6 +2,7 @@
     <button id="abutton">Show Animation</button>
     <button id="delete">Delete all</button>
     <button id="userId">User Id show</button>
+    <button id="create">Create user</button>
     <ol>
         {{#each playerinfo}}
             {{> player}}
@@ -13,6 +14,5 @@
     <li>
         <span class="name"><button>{{user}}</button></span>
         <span class="score">{{score}}</span>
-        <span class="test">{{test}}</span>
     </li>
 </template>
