--- a/client/stylesheets/stylesheet.css
+++ b/client/stylesheets/stylesheet.css
@@ -13,3 +13,40 @@ body {
     height: 100%;
     background-color: beige;
 }
+
+.leaderboard {
+    border-top: 1px solid #f1f1f1;
+    counter-reset: ol-counter;
+    list-style-type: none;
+    margin: 0 0 1.5em;
+    padding: 0;
+}
+.outer {
+    margin: 0 auto;
+    max-width: 480px;
+}
+.player {
+    border-bottom: 1px solid #f1f1f1;
+    text-align: center;
+    padding: .5em 0;
+    position: relative;
+    overflow: hidden;
+    transition: background 300ms ease-out;
+    background-color: #fefff4;
+}
+.player .name {
+    display: inline-block;
+    font-size: 1.25em;
+    font-weight: 300;
+    vertical-align: middle;
+}
+
+.player .score {
+    color: #333;
+    display: block;
+    float: right;
+    font-size: 1.25em;
+    font-weight: 600;
+    line-height: 2.4em;
+    padding-right: 1.25em;
+}
