--- a/client/templates/layout.html
+++ b/client/templates/layout.html
@@ -1,5 +1,5 @@
 <template name="layout">
-    <div class="container-fluid" id="bodybackground">
+    <div class="container" id="bodybackground">
         <header>
             {{> navigation }}
         </header>
