--- a/client/templates/testing.html
+++ b/client/templates/testing.html
@@ -1,8 +1,14 @@
 <template name="testing">
-        <button id="abutton">Reset all points</button>
-        <li>
-            <button id="poeng">Add points</button>
-        </li>
+    {{#if currentUser}}
+        <div class="btn-group btn-group-justified">
+            <div class="btn-group">
+                <button class="btn btn-success" id="poeng" onclick="this.blur();">Add points</button>
+            </div>
+            <div class="btn-group">
+                <button class="btn btn-danger" id="abutton">Reset all points</button>
+            </div>
+        </div>
+    {{/if}}
     <div class="outer">
         {{> leaderboard}}
     </div>
