--- a/client/templates/testing.html
+++ b/client/templates/testing.html
@@ -7,6 +7,9 @@
             <div class="btn-group">
                 <button class="btn btn-danger" id="abutton">Reset all points</button>
             </div>
+            <div class="btn-group">
+                <button class="btn btn-default" id="del">Delete</button>
+            </div>
         </div>
     {{/if}}
     <div class="outer">
