--- a/client/stylesheets/stylesheet.css
+++ b/client/stylesheets/stylesheet.css
@@ -22,8 +22,7 @@ body {
     padding: 0;
 }
 .outer {
-    margin: 0 auto;
-    margin-top: 1em;
+    margin: 1em auto;
     max-width: 480px;
 }
 .player {
