--- a/client/templates/Playground.html
+++ b/client/templates/Playground.html
@@ -1,19 +1,64 @@
-<template name="playground">
+<template name="playground" xmlns="http://www.w3.org/1999/html">
+    <button class="btn btn-default" id="showChat">Show Chat</button>
+    <button class="btn btn-default" id="showleader">Show Leaderboard</button>
+
+    <div class="chat" style="display: none;">
+        {{> chat}}
+    </div>
+    <div class="leader" style="display: none;">
+        {{>leaderboardMain}}
+    </div>
+</template>
+
+<template name="chat">
     <h1>COMMENT TEST</h1>
 
     <form class="input-group">
-      <input autocomplete="off" type="text" id="commentform" class="form-control" placeholder="Comment...">
+        <input autocomplete="off" type="text" id="commentform" class="form-control" placeholder="Comment...">
       <span class="input-group-btn">
             <button type="submit" class="btn btn-success" id="comment">Send</button>
       </span>
     </form>
 
 
-    {{#each comments}}
-        {{> comment}}
-    {{/each}}
+    <div class="scroll" style="max-height: 40em; overflow: auto;">
+        {{#each comments}}
+            {{name}}: {{comment}}<br/>
+        {{/each}}
+    </div>
 </template>
 
-<template name="comment">
-    <div>{{name}}: {{comment}}</div>
+<template name="leaderboardMain">
+    <h1>Leaderboard</h1>
+    {{#if currentUser}}
+        <div class="btn-group btn-group-justified">
+            <div class="btn-group">
+                <button class="btn btn-success" id="poeng" onclick="this.blur();">Add points</button>
+            </div>
+            <div class="btn-group">
+                <button class="btn btn-danger" id="abutton">Reset all points</button>
+            </div>
+            <div class="btn-group">
+                <button class="btn btn-default" id="del">Delete</button>
+            </div>
+        </div>
+    {{/if}}
+    <div class="outer">
+        {{> leaderboard}}
+    </div>
+</template>
+
+<template name="leaderboard">
+    <ol class="leaderboard">
+        {{#each playerinfo}}
+            {{> player}}
+        {{/each}}
+    </ol>
+</template>
+
+<template name="player">
+    <li class="player">
+        <span class="name">{{userName}}</span>
+        <span class="score">{{score}}</span>
+    </li>
 </template>
