--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,7 +1,4 @@
 <template name="home">
     <h1>Welcome to my Blog</h1>
-    <button>Click Me</button>
-    <p>You've pressed the button {{counter}} times.</p>
-
-    <p>you have {{points}} points.</p>
+    <p>This is just a website I created to play around with various web-stuff</p>
 </template>
