--- a/client/stylesheets/stylesheet.css
+++ b/client/stylesheets/stylesheet.css
@@ -58,10 +58,5 @@ body {
     float: right;
 }
 .blogwrapper {
-    margin-top: 2em;
-    margin-left: 2em;
-}
-
-.pre {
-    white-space: pre;
+    margin: 2em;
 }
